[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Controls/TabsPlus.gd" type="Script" id=1]

[node name="TabsWithControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabsPlus" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="TabsPlus"]
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Tabs" type="Tabs" parent="TabsPlus/Header"]
margin_right = 1000.0
margin_bottom = 24.0
size_flags_horizontal = 3
tab_align = 0
tab_close_display_policy = 2

[node name="AddButton" type="Button" parent="TabsPlus/Header"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "NEW_TAB_TITLE"
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="TabContainer" parent="TabsPlus"]
margin_top = 23.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
tab_align = 0
tabs_visible = false

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -37.5
margin_right = 100.0
margin_bottom = 37.5
window_title = "NEW_TAB_TITLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialog/HBoxContainer2"]
margin_top = 8.0
margin_right = 33.0
margin_bottom = 22.0
text = "TITLE"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog/HBoxContainer2"]
margin_left = 37.0
margin_top = 3.0
margin_right = 184.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -29.0
margin_right = 111.0
margin_bottom = 29.0
window_title = "ERROR_TITLE"
dialog_text = "NAME_CANNOT_BE_EMPTY_MESSAGE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tab_changed" from="TabsPlus/Header/Tabs" to="." method="_on_Tabs_tab_changed"]
[connection signal="tab_close" from="TabsPlus/Header/Tabs" to="." method="_on_Tabs_tab_close"]
[connection signal="pressed" from="TabsPlus/Header/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
